# wirepost

./: AGENTS.md  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
src/: main.rs
