[package]
name = "wirepost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "native-tls", "hostname", "dkim"] }
mime_guess = "2"
url = "2"
regex = "1"
native-tls = { version = "0.2", features = ["vendored"] }
